[gd_scene load_steps=3 format=3 uid="uid://b7pe7vn5rjdic"]

[ext_resource type="Script" uid="uid://bywt87axf1am3" path="res://ui/battle_ui/battle_info.gd" id="2"]

[sub_resource type="StyleBoxFlat" id="399"]
bg_color = Color(0.262745, 0.262745, 0.262745, 0.443137)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="BattleInfo" type="Panel"]
offset_right = 140.0
offset_bottom = 110.0
theme_override_styles/panel = SubResource("399")
script = ExtResource("2")

[node name="PercentDestruction" type="Label" parent="."]
layout_mode = 0
anchor_right = 1.0
offset_top = 50.0
offset_bottom = 70.0
text = "0.00 %"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeRemaing" type="Label" parent="."]
z_index = 6
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_bottom = -3.0
text = "0 s"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 21.0
offset_bottom = 25.0
